# powermgr_battery_lite

./: README.en.md  README.md  README_zh.md  batterymgr.gni  bundle.json
frameworks/: BUILD.gn
frameworks/include/: battery_framework.h  battery_info.h  battery_mgr.h  batterymgr_intf_define.h
frameworks/include/mini/: battery_interface.h
frameworks/include/small/: battery_client.h  battery_interface.h
frameworks/js/builtin/: BUILD.gn
frameworks/js/builtin/include/: battery_impl.h  battery_module.h
frameworks/js/builtin/src/: battery_impl.c  battery_module.cpp
frameworks/native/include/: battery_framework.h  battery_mgr.h  batterymgr_intf_define.h  hilog_wrapper.h
frameworks/native/src/mini/: BUILD.gn  battery_freamwork.c
frameworks/native/src/small/: BUILD.gn  battery_freamwork.c
frameworks/src/mini/: BUILD.gn  battery_freamwork.c
frameworks/src/small/: BUILD.gn  battery_client.cpp  battery_freamwork.c
interfaces/kits/: battery_info.h
interfaces/kits/js/: @ohos.batteryinfo.d.ts  @system.battery.d.ts  BUILD.gn  test.txt
interfaces/kits/js/builtin/: BUILD.gn
interfaces/kits/js/builtin/include/: battery_impl.h  battery_module.h
interfaces/kits/js/builtin/src/: battery_impl.c  battery_module.cpp
interfaces/kits/js/include/: battery_impl.h  battery_module.h
interfaces/kits/js/src/: battery_impl.c  battery_module.cpp
interfaces/kits/js/test/: battery_test.js
interfaces/kits/native/test/unittest/: BUILD.gn
interfaces/kits/native/test/unittest/src/: batterymgr_interfaces_test.cpp
services/: BUILD.gn
services/include/: battery_device.h  battery_manage_feature.h  battery_manage_service.h  ibattery.h
services/src/: battery_device.c  battery_manage_feature.c  battery_manage_service.c
services/src/mini/: BUILD.gn  battery_feature_impl.c
services/src/small/: BUILD.gn  battery_feature_impl.c
test/Interface_test/: BUILD.gn
test/Interface_test/test/unittest/: BUILD.gn
test/Interface_test/test/unittest/src/: batterymgr_interfaces_test.cpp
