# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_static_library("libnativeapi_battery_simulator") {
  public_configs = [ ":nativeapi_battery_simulator_config" ]

  sources = [ 
    "src/battery_impl.c",
    "src/battery_module.cpp",
  ]
  include_dirs = [
    "//third_party/bounds_checking_function/include",
    "include",
    "//foundation/ace/ace_engine_lite/interfaces/innerkits/builtin/jsi",
    "//foundation/ace/ace_engine_lite/interfaces/innerkits/builtin/base",
  ]
  cflags = [ "-Wno-unused-variable" ]
  deps = []
}

config("nativeapi_battery_simulator_config") {
  include_dirs = [
    "//base/powermgr/powermgr_lite/interfaces/kits/battery/js/include",
  ]
}